tests/ui/once_refresh_rejected.stderr
error: `refresh` is not supported on `#[once]`; `refresh` renews a per-entry TTL on cache hit, but `#[once]` stores a single value and does not refresh on read - set `ttl`/`ttl_secs`/`ttl_millis` for time-based expiry
 --> tests/ui/once_refresh_rejected.rs:4:4
  |
4 | fn f() -> i32 {
  |    ^
