tests/ui/once_refresh_rejected.rs
use cached::macros::once;

#[once(refresh = true)]
fn f() -> i32 {
    42
}

fn main() {}
